Uploading to cloudinary now works absolutely fine, data is getting pushed to mongodb

--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ PORT=6970
 MONGO_URI='mongodb+srv://root:toor@cluster0.mipyocm.mongodb.net/project0?retryWrites=true&w=majority&appName=Cluster0'
 NODE_ENV='development'
 JWT_SECRET='asdbdf21@$34dad123122n3amsda123'
+CLOUDINARY_CLOUD='dwbr9hz8y'
+CLOUDINARY_API_KEY='792219363973862'
+CLOUDINARY_API_SECRET='mEulN6303awTAk0h5UcTUPv5AhE'
